[project]
name = "agent_start"
version = "0.2.0"
description = "Refactored weather agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic-settings",
    "structlog",
    "pgeocode",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff>=0.4.5",
    "black",
    "isort",
    "openai",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["TEST_1/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ""

